--- a/style.css
+++ b/style.css
@@ -117,6 +117,11 @@ hr.c-hor-rule{
 .c-nav-ul{
     position: fixed;
     list-style-type: none;
+    padding-left: 1em;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .c-nav-ul a{
@@ -127,6 +132,34 @@ hr.c-hor-rule{
     font-weight: 300;
     font-style: normal;
     letter-spacing: 1px;
+}
+
+.c-nav-ul svg{
+    fill: white;
+    fill-opacity: 25%;
+    height: 15px;
+    width: 15px;
+    margin-bottom: 5px;
+}
+
+.c-svg-container::after{
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid white;
+    transform: translate(-20px,1px);
+    height: 24px;
+    width: 24px;
+    opacity: 25%;
+}
+
+.c-dots{
+    background-color: white;
+    opacity: 25%;
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    margin: 5px auto;
 }
 
 
@@ -152,7 +185,9 @@ hr.c-hor-rule{
 .c-separator{
     display: none;
 }
-
+.c-separator-content{
+    display: none;
+}
 .c-section-container{
     max-width: 200px;
 }
@@ -221,6 +256,10 @@ hr.c-hor-rule{
 
     .c-section-container p {
         max-width: none;
+    }
+
+    .c-separator-content{
+        display: inline;
     }
 
     
