--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 /* ====================================== */
 /* ====================================== */
 /*                                        */
-/*            GENERAL STYLES              */
+/*            CSS SELECTORS              */
 /*                                        */
 /* ====================================== */
 /* ====================================== */
 
-/* MOBILE: If the browser window is smaller than 768px */
 
 :root {
     --bgSapphBlue: #08244B;
@@ -74,6 +73,16 @@ h3{
     font-size: 1.5rem;
 }
 
+/* ====================================== */
+/* ====================================== */
+/*                                        */
+/*            GENERAL STYLES              */
+/*                                        */
+/* ====================================== */
+/* ====================================== */
+
+/* MOBILE: If the browser window is smaller than 768px */
+
 hr.c-hor-rule{
     border: 1px solid white;
     border-bottom: 1px solid rgba(255,255,255,1);
@@ -88,13 +97,21 @@ hr.c-hor-rule{
     transform: translateY(-2rem);
 }
 
-.c-height{
-    min-height: 100vh;
-    height: 200vh;
-    max-height: 2000px;
+.c-scroll-snap-container{
+    scroll-snap-type: y proximity;
+    overflow-y: scroll;
+    height: 100vh;
 }
 
+.c-scroll-snap-child{
+    scroll-snap-align: start;
+}
 
+.c-spacer{
+    min-height: 25vh;
+    background-color: yellow;
+    opacity: 50%;
+}
 
 /* TABLET: If the browser window is 768px or larger (For text adjustment)*/
 @media only screen and (min-width: 768px) {
@@ -114,15 +131,23 @@ hr.c-hor-rule{
 
 /* MOBILE: If the browser window is smaller than 768px */
 
-.c-nav-ul{
-    position: fixed;
-    list-style-type: none;
-    padding-left: 0.65em;
+/* Ultimate Parent Nav */
+.c-nav-container{
     height: 100vh;
+    position: fixed;
+    width: 3.125em;
+    z-index : 10000;
+}
+
+/* Apply filter effect here for liquid dots */
+.c-nav-ul{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    z-index : 10000;
+    height: 100%;
+    list-style-type: none; 
+    padding: 0;
+    margin: 0 auto ;
 }
 
 .c-nav-ul a{
@@ -165,7 +190,7 @@ hr.c-hor-rule{
     justify-content: center;
     align-items: center;
     background-color: none;
-    transition:  transform 0.25s ease-out, opacity 0.25s ease-out;
+    transition:  transform 0.25s ease-out, opacity 0.25s ease-out, background-color 0.5s ease-out;
 }
 
 .c-svg-selected svg{
@@ -205,8 +230,15 @@ hr.c-hor-rule{
 
 /* TABLET: If the browser window is 768px or larger (For text adjustment)*/
 @media only screen and (min-width: 768px) {
-    .c-nav-ul{
-        padding-left: 2.5em;
+    .c-nav-container{
+        width: 5em;
+    }
+}
+
+/* DESKTOP: If the browser window is 992px or larger */
+@media only screen and (min-width: 992px) {
+    .c-nav-container{
+        width: 7em;
     }
 }
 
@@ -228,7 +260,6 @@ hr.c-hor-rule{
     width: 100px;
     border-radius: 50%;
 }
-
 
 .c-separator{
     display: none;
