--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ hr.c-hor-rule{
     width: 8px;
     height: 8px;
     left: 50%;
-    transform: translate(-50%, -250px);
+    transform: translate(-4px, 9px);
     animation: moving 15s linear infinite;
 }
     .c-dot-move:before{
@@ -317,19 +317,6 @@ hr.c-hor-rule{
         border-radius: 50%;
         filter: blur(5px);
     }
-
-@keyframes moving {
-    0%{
-        top:260px;
-    }
-    50%{
-        top:530px;
-    }
-    100%{
-        top:260px;
-    }
-}
-
 
 /* ====================================== */
 /* ====================================== */
