--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ body{
     color: lightblue;
 }
 
+.c-overlay{
+    background-color: rgba(0,0,0, 0.25);
+}
+
+.c-overlay2{
+    background-image: linear-gradient(rgba(62, 94, 201, 0.25),rgba(0,0,0, 0.15));
+}
+
 canvas {
     width: 100% !important;
     height: 100% !important;
